--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/IACWebshop?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/webshop
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = joris
 
 
 ## Hibernate Properties
